fix dynaic gap when flex switch to row

--- a/code/style.css
+++ b/code/style.css
@@ -27,9 +27,10 @@ header {
 	top: 80%;
 }
 main {
-	padding-top: 20px;
+	padding: 20px 20px;
+	/* padding-top: 20px; */
 	margin-top: -20px;
-	padding-bottom: 20px;
+	/* padding-bottom: 20px; */
 }
 
 /* Defining flex-box elements */
@@ -51,8 +52,7 @@ main {
 .radio-container,
 .greeting-container,
 header,
-footer,
-.text-field-container {
+footer {
 	display: flex;
 	justify-content: center;
 }
@@ -74,13 +74,61 @@ footer,
 }
 
 .text-field-container {
-	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	/* align-items: center; */
+	flex-wrap: wrap;
+	width: 100%;
 }
-.icon-textbox {
+.text-field {
+	/* box-sizing: border-box; */
+	width: 100%;
+	background: transparent;
+	height: 1.8rem;
+	padding: 1px 5px 1px 30px;
+	font-size: 0.9rem;
+	border-radius: 4px 4px 4px 4px;
+	border: 1px solid #f9b44c;
+}
+/* input:-internal-autofill-selected,
+input:-internal-autofill-previewed {
+	-webkit-box-shadow: inset 0 0 4px #5c5c5c;
+} */
+/* .text-field:focus {
+	box-shadow: inset 0 0 4px #5c5c5c;
+} */
+input[type='text'] {
+	background: url('./images/user.png') no-repeat 8px 50% #e8f0fd;
+	background-size: 15px;
+}
+input[type='email'] {
+	background: url('./images/email.png') no-repeat 8px 50% #e8f0fd;
+	background-size: 15px;
+}
+input[type='password'] {
+	background: url('./images/padlock.png') no-repeat 8px 50% #e8f0fd;
+	background-size: 15px;
+}
+/* .icon-textbox {
 	box-sizing: border-box;
 	height: 1rem;
+} */
+.validation-text {
+	display: none;
+	padding-right: 20px;
+	font-size: 0.8rem;
+	color: red;
 }
-
+input:invalid ~ label {
+	display: inline;
+}
+input:invalid {
+	border: 1px solid red;
+}
+input:valid {
+	/* box-sizing: border-box; */
+	border: 1px solid limegreen;
+}
 .radio-container {
 	flex-wrap: wrap;
 	flex-direction: column;
@@ -90,46 +138,33 @@ footer,
 	flex-direction: column;
 	justify-content: flex-start;
 }
-
-button[type='submit'],
-.text-field-container {
-	box-sizing: border-box;
-	width: 95%;
-	border-radius: 4px 4px 4px 4px;
-	border: 1px solid #f9b44c;
-	background-color: #e8f0fd;
-	height: 2rem;
-	padding: 1px 10px;
-	font-size: 0.9rem;
-}
-.text-field {
-	box-sizing: border-box;
-	width: 95%;
-	background: transparent;
-	border: 0px;
-	height: 1.8rem;
-	padding: 1px 10px;
-	font-size: 0.9rem;
-}
-/* input[type='text']:-internal-autofill-selected,
-input[type='text']:-internal-autofill-previewed {
-	-webkit-background-clip: initial;
-	-webkit-box-shadow: none;
-} */
-
-.text-field:focus {
-	outline-width: 0;
-}
-.text-field-container:focus-within {
-	box-sizing: border-box;
-	border: 1px solid #5c5c5c;
-}
 input[type='radio'] {
 	width: 10%;
 }
 .radio {
 	width: 50vw;
 }
+button {
+	box-sizing: border-box;
+	width: 100%;
+	border-radius: 4px 4px 4px 4px;
+	border: 1px solid #f9b44c;
+	background-color: #e8f0fd;
+	height: 2rem;
+	padding: 1px 30px;
+	font-size: 0.9rem;
+}
+form:invalid > button {
+	color: grey;
+}
+
+/* .text-field:focus {
+	outline-width: 0;
+} */
+/* .text-field-container:focus-within {
+	box-sizing: border-box;
+	border: 1px solid #5c5c5c;
+} */
 
 /* styling of accordion */
 .accordion h1 {
@@ -182,8 +217,7 @@ input[type='radio'] {
 .radio:hover,
 input[type='radio']:hover,
 .checkbox:hover,
-input[type='checkbox']:hover,
-.icon-textbox:hover {
+input[type='checkbox']:hover {
 	cursor: pointer;
 }
 .greeting-container {
@@ -224,7 +258,9 @@ footer {
 
 @media (min-width: 768px) {
 	.flex-container {
+		--contentWidth: 362px;
 		flex-direction: row;
+		gap: min(40px, (50vw - var(--contentWidth)));
 	}
 	.form,
 	.accordion,
